[package]
name = "serde-roxmltree"
description = "Convert roxmltree documents into Serde-compatible types"
categories = ["encoding", "parser-implementations"]
keywords = ["serde", "roxmltree", "xml", "serialization"]
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/adamreichold/serde-roxmltree"
documentation = "https://docs.rs/serde-roxmltree"
readme = "README.md"
version = "0.3.4"
edition = "2021"

[dependencies]
roxmltree = { version = "0.15", default-features = false, features = ["std"] }
serde = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
