[package]
name = "serde-roxmltree"
description = "Convert roxmltree documents into Serde-compatible types"
categories = ["encoding", "parser-implementations"]
keywords = ["serde", "roxmltree", "xml", "serialization"]
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/adamreichold/serde-roxmltree"
documentation = "https://docs.rs/serde-roxmltree"
readme = "README.md"
version = "0.7.1"
edition = "2021"

[dependencies]
bit-set = "0.5"
roxmltree = { version = "0.19", default-features = false, features = ["std"] }
serde = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
