[package]
name = "serde-roxmltree"
description = "Convert roxmltree documents into Serde-compatible types"
categories = ["encoding", "parser-implementations"]
keywords = ["serde", "roxmltree", "xml", "serialization"]
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/adamreichold/serde-roxmltree"
documentation = "https://docs.rs/serde-roxmltree"
readme = "README.md"
version = "0.9.1"
edition = "2021"

[dependencies]
bit-set = "0.8"
roxmltree = { version = "0.20", default-features = false, features = ["std"] }
serde = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
# Capture subtrees from the source
raw-node = []

[package.metadata.docs.rs]
all-features = true
